posicionamento dos objetos

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                         <img src="imagens/ocean.jpg" alt="">
                     </div>
                     <div class="legenda">
-                        <p class="h2">West Coas Norway</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="h2">West Coast Norway</p>
+                        <p class="price">Roundtrip from $79</p>
+                        <p>Praesent tincidunt sed telius ut rutrum sed vitae justo</p>
+                        <button class="button">Buy Tickets</button>
                     </div>
                 </div>
                 <div class="bloco-de-imagens-o">
@@ -86,7 +88,9 @@
                     </div>
                     <div class="legenda">
                         <p class="h2">Mountains, Austria</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="price">One-way from $39</p>
+                        <p>Praesent tincidunt sed telius ut rutrum sed vitae justo</p>
+                        <button class="button">Buy Tickets</button>
                     </div>                        
                 </div>
             </div>
@@ -96,7 +100,7 @@
             <div>
                 <p>join our newsletter</p>
                 E-mail
-                <input type="email" class="form-control" name="email" id="email"  placeholder="Your Email Adress">
+                <input type="email" class="inputf" name="email" id="email"  placeholder="Your Email Adress"/>
                 <button class="button">Subscribe</button>
             </div>
         </section>
@@ -107,14 +111,14 @@
             <p>
                 Let us book your next trip!
                 <br/><br/>
-                <img src="" alt=""/> Chicago, US
-                <img src="" alt=""/> Phone: +00 151515
-                <img src="" alt=""/> Email: mail@mail.com
+                <img src="" alt=""/> Chicago, US<br/>
+                <img src="" alt=""/> Phone: +00 151515<br/>
+                <img src="" alt=""/> Email: mail@mail.com<br/>
             </p>
             <form action="">
-                <input type="text" value="Name">
-                <input type="text" value="Email">
-                <input type="text" value="Message">
+                <input class="inputf" type="text" placeholder="Name">
+                <input class="inputf" type="text" placeholder="Email">
+                <input class="inputf" type="text" placeholder="Message">
                 <button class="button">SEND MESSAGE</button>
             </form>
         </div>
