Responsividade da pagina

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <div id="logo">LOGO</div>
+        <div id="logo"> <img src="imagens/localization.png"/> Logo</div>
         <div class="search">
             <input type="search" name="search">
         </div>
-        <div class="mglass">Q</div>
+        <div id="mglass"><button><img src="imagens/mglass.png"/></button></div>
     </header>
     <main>
         <section id="home">
@@ -99,7 +99,7 @@
             <h2>Get the best offers first!</h2>
             <div>
                 <p>join our newsletter</p>
-                E-mail
+                <p>E-mail</p>
                 <input type="email" class="inputf" name="email" id="email"  placeholder="Your Email Adress"/>
                 <button class="button">Subscribe</button>
             </div>
